RESOLVED FIXED276017
[iOS] Older OS versions need to use legacy code path for process termination
https://bugs.webkit.org/show_bug.cgi?id=276017
Summary [iOS] Older OS versions need to use legacy code path for process termination
Per Arne Vollan
Reported 2024-06-28 15:12:04 PDT
Older iOS OS versions need to use legacy code path for process termination.
Attachments
Per Arne Vollan
Comment 1 2024-06-28 15:12:06 PDT
Per Arne Vollan
Comment 2 2024-06-28 15:14:47 PDT
EWS
Comment 3 2024-06-29 10:20:39 PDT
Committed 280501@main (05ef73b10fcf): <https://commits.webkit.org/280501@main> Reviewed commits have been landed. Closing PR #30287 and removing active labels.
Per Arne Vollan
Comment 4 2024-06-30 12:24:13 PDT
*** Bug 275997 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.