[iOS] Older OS versions need to use legacy code path for process termination https://bugs.webkit.org/show_bug.cgi?id=276017 rdar://130762747

Reviewed by Chris Dumez.

Older iOS versions need to use the legacy code path for process termination. This change resolves
API test failures we are seeing on bots running older versions of iOS. This issue was introduced
in <https://commits.webkit.org/280261@main>.

* Source/WTF/wtf/PlatformUse.h:
* Source/WebKit/Platform/IPC/Connection.h:
* Source/WebKit/Platform/IPC/cocoa/ConnectionCocoa.mm:
* Source/WebKit/Platform/cocoa/XPCUtilities.h:
* Source/WebKit/Platform/cocoa/XPCUtilities.mm:
* Source/WebKit/UIProcess/AuxiliaryProcessProxy.cpp:
(WebKit::AuxiliaryProcessProxy::terminate):
* Source/WebKit/UIProcess/Cocoa/XPCConnectionTerminationWatchdog.h:
* Source/WebKit/UIProcess/Cocoa/XPCConnectionTerminationWatchdog.mm:
(WebKit::XPCConnectionTerminationWatchdog::XPCConnectionTerminationWatchdog):
(WebKit::XPCConnectionTerminationWatchdog::watchdogTimerFired):

Canonical link: https://commits.webkit.org/280501@main